[gd_scene load_steps=40 format=3 uid="uid://diueuwbtv4w82"]

[ext_resource type="Script" uid="uid://d3c3d101qoirc" path="res://Scripts/Character/CharacterController.gd" id="1_twfof"]
[ext_resource type="Script" uid="uid://dkck14xrr3k1x" path="res://Scripts/Camera/CameraSystem.gd" id="3_67fxd"]
[ext_resource type="Script" uid="uid://b8pkkl01ky68w" path="res://Scripts/Character/MovementSystem.gd" id="4_eromc"]
[ext_resource type="Script" uid="uid://dvoxu6frkwrwi" path="res://Scripts/Camera/CameraDelay.gd" id="4_lmr44"]
[ext_resource type="Resource" uid="uid://ba6hbu0x8bufx" path="res://Scripts/Control/InputConfig_A.tres" id="5_6po8h"]
[ext_resource type="Script" uid="uid://thel4dd2jygm" path="res://Scripts/Camera/CameraZoom.gd" id="5_onbhd"]
[ext_resource type="Script" uid="uid://dga1kxck5v62n" path="res://Scripts/Control/InputCoordinator.gd" id="6_7dsvd"]
[ext_resource type="Script" uid="uid://dkqykiqarykxi" path="res://Scripts/Camera/CameraRotaion.gd" id="6_7j0ll"]
[ext_resource type="Resource" uid="uid://cm4kgu5akids1" path="res://Scripts/Character/MovementConfig_A.tres" id="6_35j32"]
[ext_resource type="PackedScene" uid="uid://c5modaqdbf2q2" path="res://Assets/Godeon/Godeon.tscn" id="7_lmr44"]
[ext_resource type="Script" uid="uid://ba47iqqwj2spy" path="res://Scripts/LCM/LCM_CapsuleSlopeAdjuster.gd" id="7_srjdm"]
[ext_resource type="Material" uid="uid://llhwlcpgwyag" path="res://Assets/Godeon/GodeosMat.tres" id="8_7j0ll"]
[ext_resource type="Script" uid="uid://28dvfnxe3s0s" path="res://Scripts/LCM/LCM_TerrainDetector.gd" id="9_fwnct"]
[ext_resource type="Script" uid="uid://cf3ymb4jtfldr" path="res://Scripts/LCM/LCM_CenterOfGravity.gd" id="9_srjdm"]
[ext_resource type="Script" uid="uid://bionc5y818nfv" path="res://Scripts/LCM/LCM_StabilityController.gd" id="10_bi0uc"]
[ext_resource type="Script" uid="uid://be40n1iwq5oju" path="res://Scripts/LCM/LCM_SimpleGoalStepping.gd" id="10_krpf3"]
[ext_resource type="Script" uid="uid://7lrw8qux87bl" path="res://Scripts/Navigation/NavigationCoordinator.gd" id="10_lmr44"]
[ext_resource type="Resource" uid="uid://dnbwhd8mk0n7k" path="res://Scripts/Navigation/NavigationConfig_A.tres" id="10_q7if1"]
[ext_resource type="Script" uid="uid://d0ic6m25rk78n" path="res://Scripts/Navigation/NavigationCore.gd" id="11_onbhd"]
[ext_resource type="Script" uid="uid://dmbi7feffstd1" path="res://Scripts/Navigation/ClickDetector.gd" id="12_7j0ll"]
[ext_resource type="Script" uid="uid://df7j0ab7lmhoy" path="res://Addons/libik/script/pole_bone_constraint.gd" id="12_fwnct"]
[ext_resource type="Script" uid="uid://dyh1c65tt6ho4" path="res://Scripts/Navigation/CursorVisual.gd" id="13_a5yhl"]
[ext_resource type="Script" uid="uid://c5pvv2arhccka" path="res://Scripts/LCM/LCM_IKSimple.gd" id="14_bi0uc"]
[ext_resource type="Script" uid="uid://sweqyws7gtj0" path="res://Scripts/LCM/LCM_CharacterVisualController.gd" id="14_srjdm"]
[ext_resource type="Script" uid="uid://dsn1psl1da4sg" path="res://Scripts/Navigation/MarkerManager.gd" id="15_oyw8b"]
[ext_resource type="Script" uid="uid://dib1jwwb3fxyn" path="res://Scripts/Character/MovementDebugVisualizer.gd" id="17_onbhd"]

[sub_resource type="PrismMesh" id="PrismMesh_lmr44"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_dohcx"]
radius = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_35j32"]
top_radius = 0.01
bottom_radius = 0.01

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jiddn"]
radius = 0.2
height = 1.70464

[sub_resource type="Curve" id="Curve_5i6lc"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 0.581611), 0.0, 0.366843, 0, 0, Vector2(0.558179, 1.26728), 1.99806, 1.99806, 0, 0, Vector2(1, 2.6201), 4.05558, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_srjdm"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 2.10692), 0.0, -2.69357, 0, 0, Vector2(0.580101, 1.90252), 3.65643, 3.65643, 0, 0, Vector2(1, 3.03459), 1.25998, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_bi0uc"]
_data = [Vector2(0, 0.27044), 0.0, 0.0, 0, 0, Vector2(1, 0.216981), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_krpf3"]
_data = [Vector2(0, 0.715847), 0.0, 0.0, 0, 0, Vector2(1, 0.465669), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_mjb36"]
_data = [Vector2(0, 0.18239), 0.0, 0.0, 0, 0, Vector2(0.541315, 0.487421), 0.640149, 0.640149, 0, 0, Vector2(1, 0.610063), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_mj4f1"]
_limits = [0.0, 0.1, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.0110063), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ch205"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.110063), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_petr0"]
_limits = [-20.0, 20.0, 0.0, 1.0]
_data = [Vector2(0, -10.6918), 0.0, 0.0, 0, 0, Vector2(1, 12.5786), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_vqe0y"]
_limits = [-10.0, 10.0, 0.0, 1.0]
_data = [Vector2(0, -10), 0.0, 0.0, 0, 0, Vector2(1, 10), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CCC" type="Node3D" node_paths=PackedStringArray("character_body", "camera_system", "input_coordinator", "movement_system", "navigation_coordinator")]
script = ExtResource("1_twfof")
input_config = ExtResource("5_6po8h")
character_body = NodePath("CharacterBody3D")
camera_system = NodePath("CameraSystem")
input_coordinator = NodePath("InputCoordinator")
movement_system = NodePath("MovementSystem")
navigation_coordinator = NodePath("NavigationCoordinator")

[node name="CameraLeadTarget" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PrismMesh_lmr44")
skeleton = NodePath("../CameraSystem")

[node name="CameraSystem" type="Node3D" parent="." node_paths=PackedStringArray("delay_system", "zoom_system", "rotation_system", "spring_arm", "camera", "target_object")]
script = ExtResource("3_67fxd")
delay_system = NodePath("CameraDelay")
zoom_system = NodePath("CameraZoom")
rotation_system = NodePath("CameraRotation")
spring_arm = NodePath("SpringArm3D")
camera = NodePath("SpringArm3D/CameraRig/Camera3D")
target_object = NodePath("../CharacterBody3D")
camera_height_offset = 0.0
camera_distance_offset = 3.0

[node name="CameraDelay" type="Node" parent="CameraSystem" node_paths=PackedStringArray("target_visualization")]
script = ExtResource("4_lmr44")
target_visualization = NodePath("../../CameraLeadTarget")

[node name="CameraZoom" type="Node" parent="CameraSystem"]
script = ExtResource("5_onbhd")

[node name="CameraRotation" type="Node" parent="CameraSystem"]
script = ExtResource("6_7j0ll")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraSystem"]
collision_mask = 2
shape = SubResource("SphereShape3D_dohcx")
margin = 1.0

[node name="CameraRig" type="Node3D" parent="CameraSystem/SpringArm3D"]

[node name="Camera3D" type="Camera3D" parent="CameraSystem/SpringArm3D/CameraRig"]
v_offset = 0.5

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CameraSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
visible = false
mesh = SubResource("CylinderMesh_35j32")
skeleton = NodePath("../../CharacterBody3D")

[node name="CharacterBody3D" type="CharacterBody3D" parent="." groups=["player"]]
collision_layer = 3
slide_on_ceiling = false
floor_max_angle = 1.22173

[node name="CapsuleCollider" type="CollisionShape3D" parent="CharacterBody3D" node_paths=PackedStringArray("character_body", "collision_shape", "terrain_detector")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("CapsuleShape3D_jiddn")
script = ExtResource("7_srjdm")
character_body = NodePath("..")
collision_shape = NodePath(".")
terrain_detector = NodePath("../LCM_TerrainDetector")
side_slope_offset = 0.2
max_adjustment = 0.5

[node name="LCM_CenterOfGravity" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("character_body")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 1.38197, 0)
script = ExtResource("9_srjdm")
character_body = NodePath("..")
max_forward_offset = 0.1

[node name="LCM_StabilityEvaluator" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("lcm_center_of_gravity", "left_foot_reference", "right_foot_reference", "movement_system")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 1.19209e-06, 0)
script = ExtResource("10_bi0uc")
lcm_center_of_gravity = NodePath("../LCM_CenterOfGravity")
left_foot_reference = NodePath("../Godeon/root/Skeleton3D/GodotIK/Left_IKEffector")
right_foot_reference = NodePath("../Godeon/root/Skeleton3D/GodotIK/Right_IKEffector")
movement_system = NodePath("../../MovementSystem")

[node name="LCM_TerrainDetector" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("character_body")]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.819384, 0)
script = ExtResource("9_fwnct")
character_body = NodePath("..")
near_radius = 0.5
far_radius = 1.8
near_samples = 32
far_samples = 64
enable_debug_visuals = true

[node name="LCM_SimpleGoalStepping" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("movement_system", "lcm_terrain_detector", "lcm_center_of_gravity")]
process_mode = 4
script = ExtResource("10_krpf3")
movement_system = NodePath("../../MovementSystem")
lcm_terrain_detector = NodePath("../LCM_TerrainDetector")
lcm_center_of_gravity = NodePath("../LCM_CenterOfGravity")
step_length_curve = SubResource("Curve_5i6lc")
step_frequency_curve = SubResource("Curve_srjdm")
stance_width_curve = SubResource("Curve_bi0uc")
stance_ratio_curve = SubResource("Curve_krpf3")
step_height_curve = SubResource("Curve_mjb36")
show_step_triggers = false

[node name="LCM_IKSimple" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("simple_goal_stepping", "left_foot_effector", "right_foot_effector")]
process_mode = 4
script = ExtResource("14_bi0uc")
simple_goal_stepping = NodePath("../LCM_SimpleGoalStepping")
left_foot_effector = NodePath("../Godeon/root/Skeleton3D/GodotIK/Left_IKEffector")
right_foot_effector = NodePath("../Godeon/root/Skeleton3D/GodotIK/Right_IKEffector")

[node name="Godeon" parent="CharacterBody3D" node_paths=PackedStringArray("movement_system", "simple_goal_stepping", "lcm_center_of_gravity") instance=ExtResource("7_lmr44")]
script = ExtResource("14_srjdm")
movement_system = NodePath("../../MovementSystem")
simple_goal_stepping = NodePath("../LCM_SimpleGoalStepping")
lcm_center_of_gravity = NodePath("../LCM_CenterOfGravity")
gait_amplitude_curve = SubResource("Curve_mj4f1")
speed_height_curve = SubResource("Curve_ch205")
height_response_speed = 1.0
acceleration_lean_curve = SubResource("Curve_petr0")
lean_response_speed = 20.0
turn_lean_curve = SubResource("Curve_vqe0y")
enable_slope_lean = false
max_slope_lean = -10.0
cog_lean_multiplier = 1.0

[node name="Skeleton3D" parent="CharacterBody3D/Godeon/root" index="0"]
bones/0/position = Vector3(1.2589835e-07, 95.89931, -2.5563576)
bones/0/rotation = Quaternion(-0.49909797, -0.50090045, 0.49909803, 0.5009003)
bones/1/rotation = Quaternion(-1.1127136e-08, -1.4839951e-10, -0.10477647, 0.99449587)
bones/2/position = Vector3(18.846455, 3.7981431, -2.7710894e-06)
bones/2/rotation = Quaternion(1.914779e-08, 5.777615e-10, 0.024008788, 0.99971175)
bones/3/position = Vector3(13.41242, 0.4207175, -3.9091105e-06)
bones/3/rotation = Quaternion(4.4904938e-09, 1.1549093e-09, 0.028205186, 0.9996022)
bones/4/rotation = Quaternion(0.11881539, 0.77141595, 0.05599145, 0.6226277)
bones/5/position = Vector3(15.784872, -6.1941427e-07, 5.6632325e-06)
bones/5/rotation = Quaternion(0.20113848, 0.45894745, -0.13990274, 0.85401285)
bones/6/position = Vector3(30.339918, 1.3332965e-05, 2.237543e-05)
bones/6/rotation = Quaternion(9.872018e-08, -8.172355e-08, -0.3337465, 0.94266284)
bones/7/position = Vector3(26.97514, 5.016318e-06, -3.8798053e-06)
bones/7/rotation = Quaternion(-0.58571756, -0.020432604, -0.051664997, 0.80860883)
bones/8/position = Vector3(12.068134, 1.7634645, -2.109398)
bones/8/rotation = Quaternion(0.13000596, -0.029642148, 0.4108609, 0.9018943)
bones/9/position = Vector3(4.287483, -1.0666427e-06, 6.363147e-06)
bones/9/rotation = Quaternion(0.011280109, -0.005123732, 0.2900144, 0.9569421)
bones/10/position = Vector3(3.3937845, 1.356692e-05, 2.0072584e-06)
bones/10/rotation = Quaternion(0.012380334, 0.004577903, 0.19850522, 0.9800109)
bones/11/position = Vector3(12.244297, 1.2936342, 0.5711584)
bones/11/rotation = Quaternion(0.012830035, -0.062318306, 0.44485676, 0.8933389)
bones/12/position = Vector3(4.640389, -5.9872636e-06, -2.3447963e-06)
bones/12/rotation = Quaternion(-0.014680166, 0.013967332, 0.4469579, 0.89432544)
bones/13/position = Vector3(3.6488347, -8.126744e-06, 2.86458e-06)
bones/13/rotation = Quaternion(-0.011152194, -0.037268173, 0.19688003, 0.9796556)
bones/14/position = Vector3(10.140678, 2.2631507, 4.643146)
bones/14/rotation = Quaternion(-0.173755, -0.14796782, 0.3885085, 0.892735)
bones/15/position = Vector3(3.570985, -4.049667e-06, -3.6906063e-06)
bones/15/rotation = Quaternion(0.0014447706, -0.014693332, 0.7015266, 0.7124904)
bones/16/position = Vector3(2.9856367, -4.0849836e-06, -3.9624997e-06)
bones/16/rotation = Quaternion(0.024041535, 0.02402233, 0.6355272, 0.77133006)
bones/17/position = Vector3(11.497901, 1.7535228, 2.846916)
bones/17/rotation = Quaternion(-0.08021451, -0.08894952, 0.43926257, 0.8903382)
bones/18/position = Vector3(4.4301834, 6.010422e-06, 2.283444e-06)
bones/18/rotation = Quaternion(-0.002842042, -0.0145310685, 0.5679671, 0.8229181)
bones/19/position = Vector3(3.4766517, 2.477067e-06, -3.5087041e-06)
bones/19/rotation = Quaternion(0.01028229, 0.024162173, 0.2929457, 0.95576847)
bones/20/position = Vector3(4.762037, 2.3749795, -2.5378203)
bones/20/rotation = Quaternion(0.6466803, 0.3422357, -0.046156816, 0.6801095)
bones/21/position = Vector3(3.8696744, 4.240933e-06, -1.1576763e-06)
bones/21/rotation = Quaternion(0.013043667, 0.085852064, 0.24819818, 0.96480936)
bones/22/position = Vector3(4.0621696, 4.7604044e-07, 8.1365124e-07)
bones/22/rotation = Quaternion(0.021479117, 0.00035116394, -0.036707852, 0.9990952)
bones/23/position = Vector3(13.999997, 1.4305101e-06, -4.172325e-06)
bones/23/rotation = Quaternion(0.07684249, -3.613775e-08, -1.17578516e-07, 0.99704325)
bones/24/position = Vector3(0.49999714, 4.1723256e-06, -1.9967538e-06)
bones/24/rotation = Quaternion(-0.06963843, -1.3347801e-07, 3.2129126e-08, 0.99757236)
bones/25/rotation = Quaternion(0.77141595, -0.11881441, -0.6226279, 0.055991195)
bones/26/position = Vector3(-15.784737, -5.9131435e-05, 7.736259e-05)
bones/26/rotation = Quaternion(0.20124832, 0.45986763, -0.14006479, 0.85346514)
bones/27/position = Vector3(-30.340044, 4.725797e-06, -7.4872223e-06)
bones/27/rotation = Quaternion(-7.264317e-08, -2.0070004e-07, -0.3337551, 0.94265985)
bones/28/position = Vector3(-26.97523, -1.7305545e-05, 1.0670441e-05)
bones/28/rotation = Quaternion(-0.5857172, -0.020432342, -0.05165904, 0.8086095)
bones/29/position = Vector3(-12.067951, -1.7637229, 2.1094327)
bones/29/rotation = Quaternion(0.13000597, -0.029641839, 0.4108613, 0.9018941)
bones/30/position = Vector3(-4.287679, 8.5434694e-05, -7.5712655e-05)
bones/30/rotation = Quaternion(0.011279976, -0.0051238416, 0.29001462, 0.956942)
bones/31/position = Vector3(-3.3938081, 0.00012038632, -1.1820391e-05)
bones/31/rotation = Quaternion(0.012380305, 0.0045768423, 0.19850463, 0.9800111)
bones/32/position = Vector3(-12.244128, -1.2937336, -0.5711326)
bones/32/rotation = Quaternion(0.012830078, -0.062317833, 0.4448563, 0.8933391)
bones/33/position = Vector3(-4.6405635, -0.0001421636, 9.028521e-06)
bones/33/rotation = Quaternion(-0.014680505, 0.013966807, 0.44695878, 0.8943251)
bones/34/position = Vector3(-3.648914, 2.6657699e-05, -7.0106726e-06)
bones/34/rotation = Quaternion(-0.011152089, -0.037268393, 0.1968794, 0.9796557)
bones/35/position = Vector3(-10.140596, -2.2633557, -4.6430907)
bones/35/rotation = Quaternion(-0.17375493, -0.1479674, 0.38850826, 0.89273524)
bones/36/position = Vector3(-3.5710554, -7.601863e-05, -8.928563e-06)
bones/36/rotation = Quaternion(0.0014444176, -0.0146937985, 0.7015263, 0.7124907)
bones/37/position = Vector3(-2.9854164, 0.0003162082, -3.375084e-05)
bones/37/rotation = Quaternion(0.024041478, 0.024022542, 0.6355284, 0.7713291)
bones/38/position = Vector3(-11.497974, -1.7537644, -2.8469105)
bones/38/rotation = Quaternion(-0.08021471, -0.088949375, 0.43926328, 0.8903379)
bones/39/position = Vector3(-4.429868, 8.90997e-05, -2.267548e-05)
bones/39/rotation = Quaternion(-0.0028418298, -0.014530545, 0.56796676, 0.82291836)
bones/40/position = Vector3(-3.476663, 6.57052e-05, -7.3677893e-06)
bones/40/rotation = Quaternion(0.010281755, 0.024161164, 0.29294568, 0.9557685)
bones/41/position = Vector3(-4.762123, -2.3751152, 2.537795)
bones/41/rotation = Quaternion(0.6466797, 0.3422364, -0.04615646, 0.6801097)
bones/42/position = Vector3(-3.8695588, 0.000118074066, 5.2087285e-05)
bones/42/rotation = Quaternion(0.013044053, 0.08585187, 0.24819873, 0.9648091)
bones/43/position = Vector3(-4.0621676, 4.6443856e-06, 3.9171164e-06)
bones/43/rotation = Quaternion(0.021478925, 0.00035104938, -0.036708277, 0.99909514)
bones/44/position = Vector3(-13.999995, 1.971612e-05, 3.5411467e-06)
bones/44/rotation = Quaternion(-0.040968586, -3.034853e-08, -9.233223e-08, 0.9991604)
bones/45/position = Vector3(-0.49999124, -6.35725e-07, 3.7781183e-06)
bones/45/rotation = Quaternion(-0.24140301, -1.0643722e-06, -1.4917703e-07, 0.970425)
bones/46/position = Vector3(16.558775, -0.35532215, -4.3417226e-06)
bones/46/rotation = Quaternion(-3.246678e-08, -2.3713382e-09, -0.23870894, 0.9710912)
bones/47/position = Vector3(9.283621, 0.36415052, 5.07821e-07)
bones/47/rotation = Quaternion(1.9655642e-08, 1.5462578e-09, 0.1492368, 0.9888015)
bones/48/position = Vector3(-1.4488236, -0.5314226, -9.005808)
bones/48/rotation = Quaternion(0.17383873, -0.06584403, 0.07729905, 0.97952515)
bones/49/position = Vector3(-42.51995, 0.00020901693, 0.0005375649)
bones/49/rotation = Quaternion(-0.044109855, 0.0054521873, -0.17493136, 0.98357695)
bones/50/position = Vector3(-20.476772, 0.3120121, -0.07831252)
bones/50/rotation = Quaternion(-0.0005313873, -0.0019080363, -0.0076190582, 0.99996907)
bones/51/position = Vector3(-40.19669, 3.8509857e-05, -8.929677e-06)
bones/51/rotation = Quaternion(-0.035164632, 0.042838622, 0.09604665, 0.9938327)
bones/52/position = Vector3(-10.453849, -16.577858, 0.08015508)
bones/52/rotation = Quaternion(7.9376645e-05, 2.93444e-05, -0.7186369, 0.6953855)
bones/53/position = Vector3(-22.09423, 0.021725267, -7.644667e-05)
bones/53/rotation = Quaternion(-0.15266685, 7.338303e-05, -0.00048618598, 0.9882777)
bones/54/position = Vector3(-1.4486283, -0.5314261, 9.005806)
bones/54/rotation = Quaternion(0.065782465, 0.17388846, 0.97959363, -0.07636592)
bones/55/position = Vector3(42.52015, -0.00020224298, -0.0004920397)
bones/55/rotation = Quaternion(-0.044110198, 0.005449851, -0.17493099, 0.9835771)
bones/56/position = Vector3(20.476923, -0.3120082, 0.078246064)
bones/56/rotation = Quaternion(-0.0005330428, -0.0019074879, -0.0076189283, 0.99996907)
bones/57/position = Vector3(40.196835, -3.469219e-05, -0.00017256371)
bones/57/rotation = Quaternion(-0.03516448, 0.04283986, 0.096046604, 0.99383265)
bones/58/rotation = Quaternion(8.017026e-05, 3.159549e-05, -0.71863645, 0.69538593)
bones/59/position = Vector3(22.09424, -0.021724153, 8.169997e-05)
bones/59/rotation = Quaternion(-0.15266906, 7.200363e-05, -0.00048627335, 0.98827726)
bones/61/position = Vector3(17.908728, -11.354417, 2.8113153)
bones/61/rotation = Quaternion(0.07390619, -0.70323384, 0.07390617, 0.7032339)
bones/62/position = Vector3(-17.076313, 5.0721874, 13.465192)
bones/62/rotation = Quaternion(-0.70323396, 0.07390622, 0.70323384, 0.073906206)
bones/64/position = Vector3(-32.015373, -3.4675267, 95.793976)
bones/64/rotation = Quaternion(0.6043554, -0.104600534, 0.63526064, 0.46931583)
bones/65/position = Vector3(10.949608, -46.27545, 42.87911)
bones/65/rotation = Quaternion(0.17100781, -0.7227075, 0.6696643, 1.6391277e-06)
bones/66/position = Vector3(1.47372475e-05, 1.7452987e-06, -3.3676617e-06)

[node name="Backpack" parent="CharacterBody3D/Godeon/root/Skeleton3D" index="0"]
layers = 2
material_override = ExtResource("8_7j0ll")

[node name="GodeonBody" parent="CharacterBody3D/Godeon/root/Skeleton3D" index="1"]
layers = 2
material_override = ExtResource("8_7j0ll")

[node name="GodeonEyes" parent="CharacterBody3D/Godeon/root/Skeleton3D" index="2"]
visible = false
layers = 2
material_override = ExtResource("8_7j0ll")

[node name="GodeonHead" parent="CharacterBody3D/Godeon/root/Skeleton3D" index="3"]
visible = false
layers = 2
material_override = ExtResource("8_7j0ll")

[node name="GodeonMask" parent="CharacterBody3D/Godeon/root/Skeleton3D" index="4"]
visible = false
layers = 2

[node name="GodotIK" type="GodotIK" parent="CharacterBody3D/Godeon/root/Skeleton3D" index="5"]

[node name="Left_IKEffector" type="GodotIKEffector" parent="CharacterBody3D/Godeon/root/Skeleton3D/GodotIK"]
bone_name = "foot_l"
bone_idx = 51
chain_length = 3
transform_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, 0)

[node name="PoleBoneConstraint" type="GodotIKConstraint" parent="CharacterBody3D/Godeon/root/Skeleton3D/GodotIK/Left_IKEffector"]
bone_name = "calf_l"
bone_idx = 49
script = ExtResource("12_fwnct")
pole_direction = Vector3(0, 0, 1)
metadata/_custom_type_script = "uid://df7j0ab7lmhoy"

[node name="Right_IKEffector" type="GodotIKEffector" parent="CharacterBody3D/Godeon/root/Skeleton3D/GodotIK"]
bone_name = "foot_r"
bone_idx = 57
chain_length = 3
transform_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 0, 0)

[node name="PoleBoneConstraint" type="GodotIKConstraint" parent="CharacterBody3D/Godeon/root/Skeleton3D/GodotIK/Right_IKEffector"]
bone_name = "calf_r"
bone_idx = 55
script = ExtResource("12_fwnct")
pole_direction = Vector3(0, 0, 1)
metadata/_custom_type_script = "uid://df7j0ab7lmhoy"

[node name="Ball_L" type="GodotIKEffector" parent="CharacterBody3D/Godeon/root/Skeleton3D/GodotIK"]
bone_name = "ball_l"
bone_idx = 52
transform_mode = 1

[node name="Ball_R" type="GodotIKEffector" parent="CharacterBody3D/Godeon/root/Skeleton3D/GodotIK"]
bone_name = "ball_r"
bone_idx = 58
transform_mode = 1

[node name="AnimationTree" parent="CharacterBody3D/Godeon" index="2" node_paths=PackedStringArray("movement_system")]
parameters/Idle/Add2/add_amount = 1.0
parameters/Idle/Blend2/blend_amount = 0.0
parameters/Idle/hip_drop/add_amount = 1.0
parameters/RunSprint/blend_position = -0.00345492
movement_system = NodePath("../../../MovementSystem")

[node name="PlaceholderStick" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CylinderMesh_35j32")

[node name="InputCoordinator" type="Node" parent="."]
script = ExtResource("6_7dsvd")
input_config = ExtResource("5_6po8h")

[node name="NavigationCoordinator" type="Node" parent="." node_paths=PackedStringArray("camera", "character_body", "navigation_core", "click_detector", "cursor_visual", "marker_manager")]
script = ExtResource("10_lmr44")
navigation_config = ExtResource("10_q7if1")
camera = NodePath("../CameraSystem/SpringArm3D/CameraRig/Camera3D")
character_body = NodePath("../CharacterBody3D")
navigation_core = NodePath("NavigationCore")
click_detector = NodePath("ClickDetector")
cursor_visual = NodePath("CursorVisual")
marker_manager = NodePath("MarkerManager")

[node name="NavigationCore" type="Node" parent="NavigationCoordinator"]
script = ExtResource("11_onbhd")

[node name="ClickDetector" type="Node" parent="NavigationCoordinator"]
script = ExtResource("12_7j0ll")

[node name="CursorVisual" type="Node" parent="NavigationCoordinator"]
script = ExtResource("13_a5yhl")

[node name="MarkerManager" type="Node" parent="NavigationCoordinator"]
script = ExtResource("15_oyw8b")

[node name="MovementSystem" type="Node" parent="." node_paths=PackedStringArray("character_body", "camera_pivot")]
script = ExtResource("4_eromc")
movement_config = ExtResource("6_35j32")
character_body = NodePath("../CharacterBody3D")
camera_pivot = NodePath("../CameraSystem/SpringArm3D/CameraRig/Camera3D")

[node name="MovementDebugVisualizer" type="Node" parent="MovementSystem"]
script = ExtResource("17_onbhd")
enable_debug_vectors = true
vector_height_offset = 2.0

[editable path="CharacterBody3D/Godeon"]
